Mon Dec 30 11:18:12 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_stat.h:
          Define S_ISDIR when not defined

        * tests/Compiler_Features_29_Test.cpp:
        * tests/Compiler_Features_30_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Two new C++11 tests

Wed Dec 25 00:00:00 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Merry Christmas everyone!

Mon Dec 23 10:19:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
        * tests/Compiler_Features_28_Test.cpp:
          Added missing include of cstdint

Fri Dec 20 13:43:13 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added package

Fri Dec 20 08:10:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.h:
          Fuzz error

        * bin/valgrind.supp:
          Disabled on RTI check, looks it causes problems with the
          latest valgrind release

Thu Dec 19 18:57:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.h:
          Added check that FD_SETSIZE may not be bigger than __FD_SETSIZE.
          Thanks to Mike Ketchen <mketchen at broadsoft dot com> for
          suggesting this

Wed Dec 18 14:16:57 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Upgraded to doxygen 1.8.5

Wed Dec 18 11:22:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Updated packages

        * etc/ace.doxygen:
          Upgraded to doxygen 1.8.5

Thu Dec 12 16:28:45 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ATM_Stream.cpp: Add missing OS_NS_string.h

Thu Dec 12 00:07:09 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
