@@ -778,6 +778,13 @@ project(Compiler_Features_30_Test) : acetest {
   }
 }
 
+project(Compiler_Features_31_Test) : acetest {
+  exename = Compiler_Features_31_Test
+  Source_Files {
+    Compiler_Features_31_Test.cpp
+  }
+}
+
 project(Config Test) : acetest {
   avoids += ace_for_tao
   exename = Config_Test
